ros2_package2/log/build_2023-02-08_06-10-35/my_first_package/stderr.log
/home/minkyo2/.local/lib/python3.8/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/minkyo2/ROS2/ros2_package2/install/my_first_package/lib/python3.8/site-packages/my_first_package/tuetle_cmd_and_pose.py", line 2
    import rclpy.node import Node
                      ^
SyntaxError: invalid syntax

